--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   letter-spacing:1px;
   padding:14px 26px;
   border-radius:18px;
-  background:
-    radial-gradient(circle at top,#00eaff55,transparent 60%),
-    #020617;
-  border:1px solid #1f2937;
-  box-shadow:
-    0 0 25px #00eaff55,
-    inset 0 0 20px #000;
+  background:#0f172a; /* dark navy */
+  color:#e5e7eb;
+  border:1px solid #1e293b;
+  box-shadow:0 6px 20px rgba(0,0,0,0.6);
 }
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
