--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
 .tab{width:50%;padding:12px;cursor:pointer;color:#fff;font-weight:600;transition:0.3s;}  
 .tab.active{background:#00eaff33;}  
 .logo-text-only{
-  font-size:30px;
-  font-weight:900;
-  letter-spacing:1px;
-  padding:14px 26px;
-  border-radius:18px;
-  background:#0f172a; /* dark navy */
-  color:#e5e7eb;
-  border:1px solid #1e293b;
-  box-shadow:0 6px 20px rgba(0,0,0,0.6);
+  font-size:26px;            /* logo-perfect size */
+  font-weight:800;
+  letter-spacing:0.6px;
+  padding:10px 22px;
+  border-radius:14px;
+
+  background:#0ea5a4;        /* Bazaar Sathi brand colour */
+  color:#ffffff;
+
+  box-shadow:
+    0 8px 20px rgba(0,0,0,0.35);
 }
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
