--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   font-weight:700;
   letter-spacing:0.5px;
 
-  padding:6px 20px;        /* thin background patti */
+  padding:6px 25px;        /* thin background patti */
   border-radius:10px;
 
   background:#facc15;      /* soft yellow */
@@ -46,7 +46,7 @@ form::-webkit-scrollbar{width:6px;}
 form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
 </style>  </head>  
 <body>  <div class="container">  
-    <h1 class="logo-text-only">Bazaar Sathi</h1>  
+    <h1 class="logo-text-only">🌐 BazaarSathi</h1>  
     <div class="nav-buttons">  
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
