--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   box-shadow:
     0 4px 12px rgba(0,0,0,0.25);
 }
+  .overlay{
+  position:fixed;
+  inset:0;
+  background:#000000aa;
+  backdrop-filter:blur(6px);
+  z-index:99;
+  display:none;
+}
+
+.panel{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%) scale(0.9);
+  width:100%;
+  max-width:460px;
+  z-index:100;
+  display:none;
+  animation:popup .25s ease forwards;
+}
+
+@keyframes popup{
+  to{ transform:translate(-50%,-50%) scale(1); }
+           }
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
@@ -122,7 +146,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <button type="button" class="submit">Login</button>  
     </form>  
 </div>  
-
+<div id="overlay" class="overlay" onclick="closePopup()"></div>
 
 
 </div>  <script type="module">
