--- a/index.html
+++ b/index.html
@@ -191,19 +191,28 @@ async function requestNotificationPermission() {
   }
     }
 /* ================= UI ================= */
-window.onload = ()=> showPanel('wholesaler');
+let currentPanel = null;
 
 window.showPanel = (panelId)=>{
-  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
-  document.getElementById(panelId).style.display='block';
+  if(currentPanel === panelId){
+    closePopup();
+    return;
+  }
+
+  closePopup();
+  currentPanel = panelId;
+
+  document.getElementById("overlay").style.display="block";
+  const panel = document.getElementById(panelId);
+  panel.style.display="block";
+
   switchTab(panelId,'signup');
 };
 
-window.switchTab = (panel, tab)=>{
-  document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');
-  document.getElementById(panel+'-login').classList.toggle('active',tab==='login');
-  document.querySelectorAll('#'+panel+' .tab')
-    .forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
+window.closePopup = ()=>{
+  document.getElementById("overlay").style.display="none";
+  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
+  currentPanel = null;
 };
 
 /* ================= FCM TOKEN ================= */
