--- a/index.html
+++ b/index.html
@@ -38,27 +38,50 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   .overlay{
   position:fixed;
   inset:0;
-  background:#000000aa;
-  backdrop-filter:blur(6px);
+  background:rgba(0,0,0,0.55);
+  backdrop-filter:blur(4px);
   z-index:99;
   display:none;
 }
 
+/* AUTO SIZE POPUP */
 .panel{
   position:fixed;
   top:50%;
   left:50%;
-  transform:translate(-50%,-50%) scale(0.9);
-  width:100%;
-  max-width:380px;
-  z-index:100;
+  transform:translate(-50%,-50%);
+  
+  width:auto;                 /* 🔥 auto width */
+  min-width:280px;            /* minimum readable size */
+  max-width:90vw;             /* screen ke bahar na jaye */
+
+  max-height:85vh;            /* height bhi auto */
+  overflow-y:auto;
+
+  padding:16px;
+  border-radius:16px;
+
+  background:#111827;
+  border:1px solid #1f2937;
+  box-shadow:0 20px 50px rgba(0,0,0,0.7);
+
   display:none;
-  animation:popup .25s ease forwards;
+  z-index:100;
+
+  animation:popup .2s ease-out forwards;
 }
 
+/* SMOOTH POP */
 @keyframes popup{
-  to{ transform:translate(-50%,-50%) scale(1); }
-           }
+  from{
+    opacity:0;
+    transform:translate(-50%,-45%) scale(0.96);
+  }
+  to{
+    opacity:1;
+    transform:translate(-50%,-50%) scale(1);
+  }
+}
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
