--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
     0 0 25px #00eaff55,
     inset 0 0 20px #000;
 }
+  .overlay{
+  position:fixed;
+  inset:0;
+  background:#000000aa;
+  backdrop-filter:blur(6px);
+  z-index:99;
+  display:none;
+}
+
+.panel{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%) scale(0.9);
+  width:100%;
+  max-width:460px;
+  z-index:100;
+  display:none;
+  animation:popup .25s ease forwards;
+}
+
+@keyframes popup{
+  to{ transform:translate(-50%,-50%) scale(1); }
+}
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
@@ -165,19 +189,28 @@ async function requestNotificationPermission() {
   }
     }
 /* ================= UI ================= */
-window.onload = ()=> showPanel('wholesaler');
+let currentPanel = null;
 
 window.showPanel = (panelId)=>{
-  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
-  document.getElementById(panelId).style.display='block';
+  if(currentPanel === panelId){
+    closePopup();
+    return;
+  }
+
+  closePopup();
+  currentPanel = panelId;
+
+  document.getElementById("overlay").style.display="block";
+  const panel = document.getElementById(panelId);
+  panel.style.display="block";
+
   switchTab(panelId,'signup');
 };
 
-window.switchTab = (panel, tab)=>{
-  document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');
-  document.getElementById(panel+'-login').classList.toggle('active',tab==='login');
-  document.querySelectorAll('#'+panel+' .tab')
-    .forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
+window.closePopup = ()=>{
+  document.getElementById("overlay").style.display="none";
+  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
+  currentPanel = null;
 };
 
 /* ================= FCM TOKEN ================= */
