--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ form::-webkit-scrollbar{width:6px;}
 form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
 </style>  </head>  
 <body>  <div class="container">  
-    <h1>Bazaar Sathi</h1>  
+    <h1 class="logo-text-only">🌐 BazaarSathi</h1>  
     <div class="nav-buttons">  
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
