--- a/index.html
+++ b/index.html
@@ -52,76 +52,91 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
         <button onclick="showPanel('delivery')"><i class="fas fa-motorcycle" style="color:#00ff88;"></i> Delivery Boy</button>  
           
-    </div>  <!-- WHOLESALER -->  
-<div id="wholesaler" class="panel" style="display:none;">  
-    <div class="tabs">  
-        <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
-        <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>  
-    </div>  
-    <form id="wholesaler-signup" class="active">  
-        <input type="text" placeholder="Name">  
-        <input type="number" placeholder="UPI Mobile Number">  
-        <input type="text" placeholder="Shop Current Location">  
-        <input type="password" placeholder="Password">  
-        <input type="password" placeholder="Confirm Password">  
-        <button type="button" class="submit">Create Account</button>  
-    </form>  
-    <form id="wholesaler-login">  
-        <input type="number" placeholder="Mobile Number">  
-        <input type="password" placeholder="Password">  
-        <button type="button" class="submit">Login</button>  
-    </form>  
-</div>  
+    </div>  <!-- OVERLAY -->
+<div class="overlay" onclick="closePopup()"></div>
 
-<!-- RETAILER -->  
-<div id="retailer" class="panel" style="display:none;">  
-    <div class="tabs">  
-        <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>  
-        <div class="tab" onclick="switchTab('retailer','login')">Login</div>  
-    </div>  
-    <form id="retailer-signup" class="active">  
-        <input type="text" placeholder="Name">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="text" placeholder="Shop Current Location">  
-        <input type="password" placeholder="Password">  
-        <input type="password" placeholder="Confirm Password">  
-        <button type="button" class="submit">Create Account</button>  
-    </form>  
-    <form id="retailer-login">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="password" placeholder="Password">  
-        <button type="button" class="submit">Login</button>  
-    </form>  
-</div>  
+<!-- WHOLESALER -->    
+<div id="wholesaler" class="panel" style="display:none;">    
+    <div class="popup-header">
+        <span>Wholesaler Account</span>
+        <i class="fa fa-times" onclick="closePopup()"></i>
+    </div>
+    <div class="tabs">    
+        <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>    
+        <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>    
+    </div>    
+    <form id="wholesaler-signup" class="active">    
+        <input type="text" placeholder="Name">    
+        <input type="number" placeholder="UPI Mobile Number">    
+        <input type="text" placeholder="Shop Current Location">    
+        <input type="password" placeholder="Password">    
+        <input type="password" placeholder="Confirm Password">    
+        <button type="button" class="submit">Create Account</button>    
+    </form>    
+    <form id="wholesaler-login">    
+        <input type="number" placeholder="Mobile Number">    
+        <input type="password" placeholder="Password">    
+        <button type="button" class="submit">Login</button>    
+    </form>    
+</div>    
 
-<!-- DELIVERY BOY -->  
-<div id="delivery" class="panel" style="display:none;">  
-    <div class="tabs">  
-        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
-        <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
-    </div>  
-    <form id="delivery-signup" class="active">  
-        <input type="text" placeholder="Name">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="text" placeholder="Alternate Mobile (optional)">  
-        <input type="text" placeholder="Current Live Location">  
-        <input type="password" placeholder="Password">  
-        <input type="password" placeholder="Confirm Password">  
-        <select>  
-            <option>2-Wheeler</option>  
-            <option>3-Wheeler</option>  
-            <option>4-Wheeler</option>  
-        </select>  
-        <input type="text" placeholder="Vehicle Model">  
-        <input type="text" placeholder="Vehicle Number">  
-        <button type="button" class="submit">Create Account</button>  
-    </form>  
-    <form id="delivery-login">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="password" placeholder="Password">  
-        <button type="button" class="submit">Login</button>  
-    </form>  
-</div>  
+<!-- RETAILER -->    
+<div id="retailer" class="panel" style="display:none;">    
+    <div class="popup-header">
+        <span>Retailer Account</span>
+        <i class="fa fa-times" onclick="closePopup()"></i>
+    </div>
+    <div class="tabs">    
+        <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>    
+        <div class="tab" onclick="switchTab('retailer','login')">Login</div>    
+    </div>    
+    <form id="retailer-signup" class="active">    
+        <input type="text" placeholder="Name">    
+        <input type="text" placeholder="Mobile Number">    
+        <input type="text" placeholder="Shop Current Location">    
+        <input type="password" placeholder="Password">    
+        <input type="password" placeholder="Confirm Password">    
+        <button type="button" class="submit">Create Account</button>    
+    </form>    
+    <form id="retailer-login">    
+        <input type="text" placeholder="Mobile Number">    
+        <input type="password" placeholder="Password">    
+        <button type="button" class="submit">Login</button>    
+    </form>    
+</div>    
+
+<!-- DELIVERY BOY -->    
+<div id="delivery" class="panel" style="display:none;">    
+    <div class="popup-header">
+        <span>Delivery Boy Account</span>
+        <i class="fa fa-times" onclick="closePopup()"></i>
+    </div>
+    <div class="tabs">    
+        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>    
+        <div class="tab" onclick="switchTab('delivery','login')">Login</div>    
+    </div>    
+    <form id="delivery-signup" class="active">    
+        <input type="text" placeholder="Name">    
+        <input type="text" placeholder="Mobile Number">    
+        <input type="text" placeholder="Alternate Mobile (optional)">    
+        <input type="text" placeholder="Current Live Location">    
+        <input type="password" placeholder="Password">    
+        <input type="password" placeholder="Confirm Password">    
+        <select>    
+            <option>2-Wheeler</option>    
+            <option>3-Wheeler</option>    
+            <option>4-Wheeler</option>    
+        </select>    
+        <input type="text" placeholder="Vehicle Model">    
+        <input type="text" placeholder="Vehicle Number">    
+        <button type="button" class="submit">Create Account</button>    
+    </form>    
+    <form id="delivery-login">    
+        <input type="text" placeholder="Mobile Number">    
+        <input type="password" placeholder="Password">    
+        <button type="button" class="submit">Login</button>    
+    </form>    
+</div>
 
 
 
