--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   box-shadow:
     0 4px 12px rgba(0,0,0,0.25);
 }
+  .overlay {
+    display: none;
+    position: fixed;
+    inset: 0; /* top:0; left:0; right:0; bottom:0; */
+    background: rgba(0,0,0,0.6);
+    z-index: 5;
+  }
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
