--- a/index.html
+++ b/index.html
@@ -35,13 +35,6 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   box-shadow:
     0 4px 12px rgba(0,0,0,0.25);
 }
-  .overlay {
-    display: none;
-    position: fixed;
-    inset: 0; /* top:0; left:0; right:0; bottom:0; */
-    background: rgba(0,0,0,0.6);
-    z-index: 5;
-  }
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
@@ -59,91 +52,76 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
         <button onclick="showPanel('delivery')"><i class="fas fa-motorcycle" style="color:#00ff88;"></i> Delivery Boy</button>  
           
-    </div>  <!-- OVERLAY -->
-<div class="overlay" onclick="closePopup()"></div>
+    </div>  <!-- WHOLESALER -->  
+<div id="wholesaler" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>  
+    </div>  
+    <form id="wholesaler-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="number" placeholder="UPI Mobile Number">  
+        <input type="text" placeholder="Shop Current Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="wholesaler-login">  
+        <input type="number" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
-<!-- WHOLESALER -->    
-<div id="wholesaler" class="panel" style="display:none;">    
-    <div class="popup-header">
-        <span>Wholesaler Account</span>
-        <i class="fa fa-times" onclick="closePopup()"></i>
-    </div>
-    <div class="tabs">    
-        <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>    
-        <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>    
-    </div>    
-    <form id="wholesaler-signup" class="active">    
-        <input type="text" placeholder="Name">    
-        <input type="number" placeholder="UPI Mobile Number">    
-        <input type="text" placeholder="Shop Current Location">    
-        <input type="password" placeholder="Password">    
-        <input type="password" placeholder="Confirm Password">    
-        <button type="button" class="submit">Create Account</button>    
-    </form>    
-    <form id="wholesaler-login">    
-        <input type="number" placeholder="Mobile Number">    
-        <input type="password" placeholder="Password">    
-        <button type="button" class="submit">Login</button>    
-    </form>    
-</div>    
+<!-- RETAILER -->  
+<div id="retailer" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('retailer','login')">Login</div>  
+    </div>  
+    <form id="retailer-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="text" placeholder="Shop Current Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="retailer-login">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
-<!-- RETAILER -->    
-<div id="retailer" class="panel" style="display:none;">    
-    <div class="popup-header">
-        <span>Retailer Account</span>
-        <i class="fa fa-times" onclick="closePopup()"></i>
-    </div>
-    <div class="tabs">    
-        <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>    
-        <div class="tab" onclick="switchTab('retailer','login')">Login</div>    
-    </div>    
-    <form id="retailer-signup" class="active">    
-        <input type="text" placeholder="Name">    
-        <input type="text" placeholder="Mobile Number">    
-        <input type="text" placeholder="Shop Current Location">    
-        <input type="password" placeholder="Password">    
-        <input type="password" placeholder="Confirm Password">    
-        <button type="button" class="submit">Create Account</button>    
-    </form>    
-    <form id="retailer-login">    
-        <input type="text" placeholder="Mobile Number">    
-        <input type="password" placeholder="Password">    
-        <button type="button" class="submit">Login</button>    
-    </form>    
-</div>    
-
-<!-- DELIVERY BOY -->    
-<div id="delivery" class="panel" style="display:none;">    
-    <div class="popup-header">
-        <span>Delivery Boy Account</span>
-        <i class="fa fa-times" onclick="closePopup()"></i>
-    </div>
-    <div class="tabs">    
-        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>    
-        <div class="tab" onclick="switchTab('delivery','login')">Login</div>    
-    </div>    
-    <form id="delivery-signup" class="active">    
-        <input type="text" placeholder="Name">    
-        <input type="text" placeholder="Mobile Number">    
-        <input type="text" placeholder="Alternate Mobile (optional)">    
-        <input type="text" placeholder="Current Live Location">    
-        <input type="password" placeholder="Password">    
-        <input type="password" placeholder="Confirm Password">    
-        <select>    
-            <option>2-Wheeler</option>    
-            <option>3-Wheeler</option>    
-            <option>4-Wheeler</option>    
-        </select>    
-        <input type="text" placeholder="Vehicle Model">    
-        <input type="text" placeholder="Vehicle Number">    
-        <button type="button" class="submit">Create Account</button>    
-    </form>    
-    <form id="delivery-login">    
-        <input type="text" placeholder="Mobile Number">    
-        <input type="password" placeholder="Password">    
-        <button type="button" class="submit">Login</button>    
-    </form>    
-</div>
+<!-- DELIVERY BOY -->  
+<div id="delivery" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
+    </div>  
+    <form id="delivery-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="text" placeholder="Alternate Mobile (optional)">  
+        <input type="text" placeholder="Current Live Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <select>  
+            <option>2-Wheeler</option>  
+            <option>3-Wheeler</option>  
+            <option>4-Wheeler</option>  
+        </select>  
+        <input type="text" placeholder="Vehicle Model">  
+        <input type="text" placeholder="Vehicle Number">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="delivery-login">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
 
 
@@ -189,17 +167,6 @@ async function requestNotificationPermission() {
   }
     }
 /* ================= UI ================= */
-function showPanel(panelId, tab = 'signup') {
-  document.querySelectorAll('.panel').forEach(p => p.style.display = 'none');
-  document.getElementById(panelId).style.display = 'block';
-  document.querySelector('.overlay').style.display = 'block';
-  switchTab(panelId, tab);
-}
-
-function closePopup() {
-  document.querySelectorAll('.panel').forEach(p => p.style.display = 'none');
-  document.querySelector('.overlay').style.display = 'none';
-}
 window.onload = ()=> showPanel('wholesaler');
 
 window.showPanel = (panelId)=>{
@@ -214,6 +181,7 @@ window.switchTab = (panel, tab)=>{
   document.querySelectorAll('#'+panel+' .tab')
     .forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
 };
+
 /* ================= FCM TOKEN ================= */
 async function getFCMToken(){
   try{
