--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
         <button onclick="showPanel('delivery')"><i class="fas fa-motorcycle" style="color:#00ff88;"></i> Delivery Boy</button>  
-          
-    </div>  <!-- WHOLESALER -->  
+        
+    </div> 
+   <div class="overlay" onclick="closePopup()"></div>  
+  
+  <!-- WHOLESALER -->  
 <div id="wholesaler" class="panel" style="display:none;">  
     <div class="tabs">  
         <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
