--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
       <p style="margin-top:15px;font-size:14px;opacity:0.8">
   Already have an account?
   <span style="color:#00eaff;cursor:pointer;font-weight:600"
-        onclick="switchTab('wholesaler','login')">
+        onclick="switchTab('retailer','login')">
     Login here
   </span>
 </p>
@@ -174,7 +174,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
       <p style="margin-top:15px;font-size:14px;opacity:0.8">
   Already have an account?
   <span style="color:#00eaff;cursor:pointer;font-weight:600"
-        onclick="switchTab('wholesaler','login')">
+        onclick="switchTab('delivery','login')">
     Login here
   </span>
 </p>
