--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
   
   <!-- WHOLESALER -->  
 <div id="wholesaler" class="panel" style="display:none;">  
+  <div class="popup-header">
+  <span class="close-btn" onclick="closePopup()">✖</span>
+  </div>
     <div class="tabs">  
         <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>  
@@ -124,6 +127,9 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
 
 <!-- RETAILER -->  
 <div id="retailer" class="panel" style="display:none;">  
+  <div class="popup-header">
+  <span class="close-btn" onclick="closePopup()">✖</span>
+</div>
     <div class="tabs">  
         <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('retailer','login')">Login</div>  
@@ -151,7 +157,10 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
 </div>  
 
 <!-- DELIVERY BOY -->  
-<div id="delivery" class="panel" style="display:none;">  
+<div id="delivery" class="panel" style="display:none;"> 
+  <div class="popup-header">
+  <span class="close-btn" onclick="closePopup()">✖</span>
+</div>
     <div class="tabs">  
         <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
