--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   z-index:100;
 }
 .popup-header{
+  position:sticky;
+  top:0;
+  background:#000;
+  z-index:20;
+
   display:flex;
-  justify-content:space-between;
+  justify-content:flex-end;
   align-items:center;
-  margin-bottom:15px;
+
+  padding-bottom:10px;
+  margin-bottom:10px;
 }
 
 .popup-header span{
@@ -77,7 +84,18 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   cursor:pointer;
   font-size:18px;
 }
-form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
+form{
+  display:none;
+
+  max-height:calc(90vh - 140px);  /* 🔥 MAGIC LINE */
+  overflow-y:auto;
+
+  padding-right:5px;
+}
+
+form.active{
+  display:block;
+}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
 input::placeholder{color:#aaa;}  
